syntax = "proto3";

package monorepopb.server.api.user;

option go_package = "github.com/ispec-inc/monorepo/proto/monorepopb/server/api/user";
option ruby_package = "UserPb";

import "monorepopb/server/view/user.proto";

message GetRequest {}

message GetResponse {
  monorepopb.server.view.User users = 1;
}
message CreateRequest {
  string name = 1;
  string description = 2;
  string email = 3;
}

message CreateResponse {
  repeated monorepopb.server.view.User users = 1;
}
